Fix date picker not showing up on top in Chrome

--- a/src/resources/elements/date-picker/date-picker.less
+++ b/src/resources/elements/date-picker/date-picker.less
@@ -80,6 +80,9 @@ date-picker {
 }
 
 .datepicker {
+    &.dropdown-menu {
+        z-index: 1;
+    }
     table {
         tbody {
             td.day {
